Apply IntelliJ inspection cleanup: DRY, dead code, fail-fast